# qorvex

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  install.sh  refactor_prd.md
.github/workflows/: ci.yml  release.yml
crates/qorvex-auto/: Cargo.toml
crates/qorvex-auto/src/: ast.rs  converter.rs  error.rs  executor.rs  main.rs  parser.rs  runtime.rs
crates/qorvex-cli/: Cargo.toml
crates/qorvex-cli/src/: converter.rs  main.rs
crates/qorvex-cli/tests/: cli_integration.rs  simulator_suite.rs
crates/qorvex-cli/tests/fixtures/: basic_session.jsonl  error_session.jsonl
crates/qorvex-cli/tests/simulator/: harness.rs  mod.rs  test_animation.rs  test_controls.rs  test_dynamic.rs  test_gestures.rs  test_meta.rs  test_navigation.rs  test_text_input.rs
crates/qorvex-core/: Cargo.toml
crates/qorvex-core/src/: action.rs  adb_device.rs  adb_forward.rs  agent_client.rs  agent_driver.rs  agent_lifecycle.rs  agent_session.rs  android_driver.rs  android_lifecycle.rs  axe.rs  config.rs  core_device_tunnel.rs  coredevice.rs  driver.rs  element.rs  executor.rs  ipc.rs  lib.rs  protocol.rs  session.rs  simctl.rs  usb_tunnel.rs  watcher.rs
crates/qorvex-core/tests/: android_parity.rs  driver_integration.rs  e2e_pipeline.rs  error_recovery.rs  ipc_integration.rs
crates/qorvex-core/tests/common/: mod.rs
crates/qorvex-live/: Cargo.toml
crates/qorvex-live/src/: main.rs
crates/qorvex-repl/: Cargo.toml
crates/qorvex-repl/src/: app.rs  format.rs  main.rs
crates/qorvex-repl/src/completion/: commands.rs  fuzzy.rs  mod.rs
crates/qorvex-repl/src/ui/: completion.rs  mod.rs  theme.rs
crates/qorvex-server/: Cargo.toml
crates/qorvex-server/src/: main.rs  server.rs
crates/qorvex-watcher/: Cargo.toml
crates/qorvex-watcher/src/: main.rs
docs/: INDEX.md
docs/dev/: agent.md  architecture.md  contributing.md  driver.md  ipc.md  protocol.md  scripting-internals.md  session-and-events.md
docs/user/: commands.md  getting-started.md  scripting-guide.md  troubleshooting.md
qorvex-agent/: Makefile  README.md  project.yml
qorvex-agent-android/: README.md  build.gradle.kts  settings.gradle.kts
qorvex-agent-android/src/androidTest/java/com/qorvex/agent/: AgentServer.kt  CommandHandler.kt  NodeMapper.kt  QorvexAgentTest.kt
qorvex-agent-android/src/main/: AndroidManifest.xml
qorvex-agent-android/src/main/java/com/qorvex/agent/: AgentHostActivity.kt  Protocol.kt  UITreeSerializer.kt
qorvex-agent-android/src/test/java/com/qorvex/agent/: GetValueRuleTest.kt  ProtocolWireTest.kt  SerializerTest.kt
qorvex-agent/App/: QorvexAgentApp.swift
qorvex-agent/Sources/: AgentServer.swift  BridgingHeader.h  CommandHandler.swift  ObjCExceptionCatcher.h  ObjCExceptionCatcher.m  ParseSelectorIndexTests.swift  Protocol.swift  QorvexAgentTests.swift  UITreeSerializer.swift
qorvex-streamer/: Makefile  Package.swift
qorvex-streamer/Sources/: FrameStreamer.swift  SocketWriter.swift  WindowFinder.swift  main.swift
qorvex-testapp/: Makefile  project.yml
qorvex-testapp-android/: README.md  build.gradle.kts  settings.gradle.kts
qorvex-testapp-android/src/main/: AndroidManifest.xml
qorvex-testapp-android/src/main/java/com/qorvex/testapp/: Ids.kt  MainActivity.kt
qorvex-testapp-android/src/main/res/values/: ids.xml  strings.xml
qorvex-testapp-android/src/test/java/com/qorvex/testapp/: IdsCompletenessTest.kt
qorvex-testapp/Sources/: ControlsView.swift  DynamicView.swift  NavigationTestView.swift  QorvexTestApp.swift  ScrollGesturesView.swift  TextInputView.swift
scripts/: android_parity_live.sh
