[workspace]
resolver = "2"
members = [
    "crates/qorvex-core",
    "crates/qorvex-repl",
    "crates/qorvex-live",
    "crates/qorvex-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/simonspoon/qorvex"
keywords = ["ios", "simulator", "automation", "testing", "macos"]
categories = ["development-tools::testing"]

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
