[package]
name = "qorvex-core"
description = "Core library for iOS Simulator automation and testing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { version = "1", features = ["rt", "sync", "io-util", "macros", "net", "time"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "io-util", "macros", "net", "test-util", "time"] }
uuid = { version = "1", features = ["v4"] }
