[package]
name = "qorvex-core"
description = "Core library for iOS Simulator automation and testing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { version = "1", features = ["rt", "sync", "io-util", "macros", "net", "time"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
base64 = "0.22"
dirs = "5"
idevice = { version = "0.1", default-features = false, features = ["usbmuxd", "tunneld", "tcp", "core_device_proxy", "tunnel_tcp_stack", "rustls", "ring"] }
tracing = { workspace = true }
socket2 = "0.5"

[features]
# Exposes `#[doc(hidden)]` constructors that inject a pre-connected
# `AgentClient`/forward into drivers, so out-of-crate parity tests can drive the
# real trait surface over a loopback mock without a device (adb / usbmuxd). Not
# enabled in normal builds, and NOT auto-enabled for this crate's own tests:
# plain `cargo test` leaves it off, which compiles out the
# `tests/android_parity.rs` harness (it is `#![cfg(feature = "test-support")]`).
# CI/release therefore pass `--features test-support` explicitly so the parity
# suite actually runs. Run locally with:
#   cargo test -p qorvex-core --features test-support
test-support = []

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "io-util", "macros", "net", "test-util", "time"] }
uuid = { version = "1", features = ["v4"] }
