[package]
name = "qorvex-repl"
description = "Interactive REPL for iOS Simulator automation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
qorvex-core = { path = "../qorvex-core" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
base64 = "0.22"
