[package]
name = "qorvex-repl"
description = "Interactive REPL for iOS Simulator automation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
qorvex-core = { path = "../qorvex-core" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
ratatui = { version = "0.30", features = ["crossterm"] }
tui-input = "0.15"
fuzzy-matcher = "0.3"
arboard = "3"
dirs = "5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
