[package]
name = "qorvex-server"
description = "Standalone automation server for iOS Simulator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
qorvex-core = { path = "../qorvex-core" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
