[package]
name = "qorvex-watcher"
description = "TUI client for monitoring iOS Simulator automation sessions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
qorvex-core = { path = "../qorvex-core" }
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.29"
ratatui-image = "4"
image = "0.25"
base64 = "0.22"
